--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/posterPath_movie_detail"
                 android:layout_width="130dp"
                 android:layout_height="150dp"
-                android:layout_marginTop="180dp"
+                android:layout_marginTop="160dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment_movie_detail"
@@ -109,7 +109,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:text="@string/popularity"
                 android:textAlignment="center"
                 android:textColor="#FFEB3B"
@@ -158,13 +158,11 @@
                 app:layout_constraintStart_toStartOf="@+id/txtview3"
                 app:layout_constraintTop_toBottomOf="@+id/txtview3" />
 
-            <androidx.cardview.widget.CardView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cardView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="5dp"
                 android:background="@drawable/card_shape"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -179,10 +177,11 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="30dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/overview"
                         android:textColor="#0C0C0C"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -195,7 +194,8 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="10dp"
                         android:text="@string/nonValue"
-                        android:textColor="#EADDDD"
+                        android:textColor="#CAB818"
+                        android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="@+id/textView2"
                         app:layout_constraintStart_toStartOf="@+id/textView2"
                         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -208,8 +208,8 @@
                         android:layout_marginTop="10dp"
                         android:text="@string/nonValue"
                         android:textAlignment="textStart"
-                        android:textColor="#EADDDD"
-                        android:textSize="12sp"
+                        android:textColor="#CAB818"
+                        android:textSize="14sp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/voteCount_movie_detail"
                         app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -221,8 +221,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:text="@string/nonValue"
-                        android:textAlignment="textStart"
-                        android:textColor="#EADDDD"
+                        android:textColor="#A39C9C"
                         android:textSize="12sp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/overviewText_movieDetails"
@@ -232,11 +231,12 @@
                     <TextView
                         android:id="@+id/textView7"
                         android:layout_width="0dp"
-                        android:layout_height="19dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
                         android:text="@string/voteCount"
                         android:textAlignment="textStart"
                         android:textColor="#0C0C0C"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="@+id/textView2"
                         app:layout_constraintTop_toBottomOf="@+id/overviewText_movieDetails" />
@@ -248,6 +248,7 @@
                         android:layout_marginTop="30dp"
                         android:text="@string/genre"
                         android:textColor="#0C0C0C"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/voteAverage_movie_detail"
                         app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -263,7 +264,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
