--- a/app/src/main/res/layout/card_genres_movie_detail.xml
+++ b/app/src/main/res/layout/card_genres_movie_detail.xml
@@ -6,13 +6,13 @@
     android:paddingBottom="20dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="15dp"
-        app:cardBackgroundColor="@color/purple_200"
+        app:cardBackgroundColor="#BD0F0F"
         app:cardCornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,16 +21,19 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/genre_fragment_movie_detail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginBottom="20dp"
                 android:text="@string/nonValue"
                 android:textAlignment="center"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
