--- a/app/src/main/res/layout/card_nowplaying.xml
+++ b/app/src/main/res/layout/card_nowplaying.xml
@@ -46,29 +46,26 @@
                 app:layout_constraintStart_toEndOf="@+id/imagePoster_nowplaying"
                 app:layout_constraintTop_toTopOf="@+id/imagePoster_nowplaying" />
 
-            <TextView
-                android:id="@+id/originalLanguage_nowplaying"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="@string/nonValue"
-                android:textColor="#FF9800"
-                app:layout_constraintEnd_toEndOf="@+id/title_nowplaying"
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="10dp"
                 app:layout_constraintStart_toStartOf="@+id/title_nowplaying"
-                app:layout_constraintTop_toBottomOf="@+id/title_nowplaying" />
+                app:layout_constraintTop_toBottomOf="@+id/title_nowplaying"
+                app:srcCompat="@drawable/star" />
 
             <TextView
-                android:id="@+id/releaseDate_nowplaying"
+                android:id="@+id/rating_nowplaying"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:text="@string/nonValue"
                 android:textColor="#FF9800"
-                app:layout_constraintBottom_toBottomOf="@+id/imagePoster_nowplaying"
-                app:layout_constraintEnd_toEndOf="@+id/originalLanguage_nowplaying"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/originalLanguage_nowplaying"
-                app:layout_constraintTop_toBottomOf="@+id/originalLanguage_nowplaying"
-                app:layout_constraintVertical_bias="0.116" />
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/title_nowplaying"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintTop_toTopOf="@+id/imageView" />
 
             <View
                 android:id="@+id/divider"
@@ -76,11 +73,23 @@
                 android:layout_height="2dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginBottom="15dp"
-                android:background="@color/black"
+                android:background="#CFCACA"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/releaseDate_nowplaying"
+                app:layout_constraintEnd_toEndOf="@+id/rating_nowplaying"
                 app:layout_constraintStart_toStartOf="@+id/imagePoster_nowplaying"
                 app:layout_constraintTop_toBottomOf="@+id/imagePoster_nowplaying" />
+
+            <TextView
+                android:id="@+id/overview_listNowPlaying"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:maxLines="3"
+                android:text="TextView"
+                android:textColor="#FFFF9800"
+                app:layout_constraintEnd_toEndOf="@+id/rating_nowplaying"
+                app:layout_constraintStart_toStartOf="@+id/imageView"
+                app:layout_constraintTop_toBottomOf="@+id/rating_nowplaying" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
